<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/arkaplanrenk"
    android:padding="5dp"
    tools:context=".control.Yardim">

    <!--
         The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc.
    -->

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->

    <ScrollView
        android:id="@+id/yardimOForm"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textV8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/yardim_satir_1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/yardim_satir_2"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yardim_satir_3"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/yardim_satir_4"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yardim_satir_5"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/yardim_satir_6"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yardim_satir_7"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/yardim_satir_8"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/yardim_satir_9"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000" />

            <Button
                android:id="@+id/yBtnGeri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/geri" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>